fixed modal image width on small devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -421,12 +421,17 @@ footer > section img {
   .modal_wrapper .left_container {
     display: grid !important;
     gap: 1rem !important;
-    padding-top: 3rem !important;
+    padding-top: 5rem !important;
   }
 
   .image-container {
     display: flex;
     justify-content: center;
+  }
+
+  .left_container img{
+    width: 100% !important;
+    object-fit: contain !important;
   }
 
   .close_button_phone {
